# fmi-interface-cpp

./: .gitignore  CMakeLists.txt  FmiTest.mo  README.md  buildfmi.mos  fmi_interface.cpp  fmitest.cpp
dynamic/: buildfmi.mos  fmi_interface.cpp  fmi_interface.h  fmitest.cpp
static/: fmitest.cpp
